[build-system]
requires = ["setuptools>=58.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-tree"
version = "1.0.0"
authors = [
  { name="Alexandr Gusev", email="alphacity@yandex.ru" },
]
description = "Utility class for fast partial rendering of large trees"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "fast",
    "partial",
    "rendering",
    "large",
    "tree"
]
dependencies = [
    "fast-tree-utils == 1.0.0"
]
requires-python = ">=3.9.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Alexandr-Gusev/fast-tree"
